--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "npm run tailwind:build",
     "tailwind:watch": "tailwindcss -i ./src/input.css -o ./public/styles.css --watch",
     "tailwind:build": "tailwindcss -i ./src/input.css -o ./public/styles.css --minify",
-    "postinstall": "npm run build"
+    "vercel-build": "npm run tailwind:build"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -17,7 +17,9 @@
     "marked": "^12.0.0",
     "highlight.js": "^11.9.0",
     "fs": "0.0.1-security",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "tailwindcss": "^3.4.0",
+    "@tailwindcss/typography": "^0.5.10"
   },
   "devDependencies": {
     "tailwindcss": "^3.4.0",
